Fixed Java 20 deprecation